--- a/CacelApp/App.xaml
+++ b/CacelApp/App.xaml
@@ -14,6 +14,9 @@
 
             </ResourceDictionary.MergedDictionaries>
 
+            <!-- Color primario de la aplicación (personalizable) -->
+            <SolidColorBrush x:Key="AppPrimaryBrush" Color="#D32F2F"/>
+
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
             <converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter" />
             <converters:BoolToGreenRedConverter x:Key="BoolToGreenRedConverter" />
