refactor(ui-components): crea componentes UI, Reorganiza namespaces
Se reorganiza la estructura de los namespaces para los controles compartidos, mejorando la coherencia y mantenibilidad del código. Adicionalmente, se elimina el componente ImageViewer.

- Mueve DataTableControl y DataTableViewModel al namespace CacelApp.Shared.Controls.DataTable.
- Mueve PdfViewerWindow al namespace CacelApp.Shared.Controls.PdfViewer.
- Elimina el componente ImageViewer (ViewModel y Window) por completo.
- Actualiza todas las referencias y 'using' statements para reflejar los nuevos namespaces.

--- a/CacelApp/Views/Modulos/Pesajes/MantPesajes.xaml
+++ b/CacelApp/Views/Modulos/Pesajes/MantPesajes.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:converters="clr-namespace:CacelApp.Config.Converters"
-        xmlns:controls="clr-namespace:CacelApp.Shared.Controls"
+        xmlns:controls="clr-namespace:CacelApp.Shared.Controls.DataTable"
         mc:Ignorable="d"
         Title="{Binding Titulo}" 
         Height="910" 
