--- a/CacelApp/Shared/Controls/DataTable/DataTableControl.xaml
+++ b/CacelApp/Shared/Controls/DataTable/DataTableControl.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="CacelApp.Shared.Controls.DataTableControl"
+<UserControl x:Class="CacelApp.Shared.Controls.DataTable.DataTableControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
