--- a/CacelApp/Shared/Controls/ImageViewer/ImageViewerWindow.xaml
+++ b/CacelApp/Shared/Controls/ImageViewer/ImageViewerWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="CacelApp.Shared.Controls.ImageViewerWindow"
+<Window x:Class="CacelApp.Shared.Controls.ImageViewer.ImageViewerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
