--- a/CacelApp/Shared/Controls/PdfViewer/PdfViewerWindow.xaml
+++ b/CacelApp/Shared/Controls/PdfViewer/PdfViewerWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="CacelApp.Shared.Controls.PdfViewerWindow"
+<Window x:Class="CacelApp.Shared.Controls.PdfViewer.PdfViewerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
