refactor(balanza): migra filtros a componentes de formulario personalizados
Se refactorizó la vista Balanza para utilizar componentes de formulario personalizados, mejorando la consistencia y reusabilidad de los elementos de entrada.

- Se reemplazaron DatePicker, TextBox y Button por FormDatePicker, FormField y CustomButton respectivamente en Balanza.xaml.
- Se eliminó el filtro de estado de la interfaz de usuario y la lógica de búsqueda en Balanza.
- Se simplificó la asignación de HelperText en FormComboBox y FormField.

--- a/CacelApp/Shared/Controls/Form/FormComboBox.xaml
+++ b/CacelApp/Shared/Controls/Form/FormComboBox.xaml
@@ -12,11 +12,8 @@
                   Style="{StaticResource MaterialDesignFloatingHintComboBox}"
                   FontSize="13"
                   materialDesign:HintAssist.Hint="{Binding DisplayLabel, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                  materialDesign:HintAssist.HelperText="{Binding HelperText, RelativeSource={RelativeSource AncestorType=UserControl}}"
                   SelectedValue="{Binding Value, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                  IsEnabled="{Binding IsEnabled, RelativeSource={RelativeSource AncestorType=UserControl}}">
-            <materialDesign:HintAssist.HelperText>
-                <TextBlock Text="{Binding HelperText, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
-            </materialDesign:HintAssist.HelperText>
-        </ComboBox>
+                  IsEnabled="{Binding IsEnabled, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
     </Grid>
 </UserControl>
