--- a/CacelApp/Views/Modulos/Balanza/Balanza.xaml
+++ b/CacelApp/Views/Modulos/Balanza/Balanza.xaml
@@ -6,6 +6,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:CacelApp.Views.Modulos.Balanza"
              xmlns:controls="clr-namespace:CacelApp.Shared.Controls.DataTable"
+             xmlns:form="clr-namespace:CacelApp.Shared.Controls.Form"
              mc:Ignorable="d" 
              d:DesignHeight="900" d:DesignWidth="1400"  MinWidth="800"
              d:DataContext="{d:DesignInstance Type=local:BalanzaModel, IsDesignTimeCreatable=False}"
@@ -96,9 +97,8 @@
             </Grid>
         </Border>
 
-        <Border Grid.Row="1" Background="{DynamicResource MaterialDesignCardBackground}" BorderBrush="{DynamicResource MaterialDesignDividerBrush}"
-                BorderThickness="0,1,0,1"
-                Padding="20" CornerRadius="8,8,0,0">
+        <Border Grid.Row="1" Background="{DynamicResource MaterialDesignCardBackground}"
+                Padding="20">
             <StackPanel>
                 <TextBlock Text="Filtros de Búsqueda" 
                            FontSize="14" 
@@ -112,71 +112,41 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="1.5*"/>
                         <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="1.5*"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
                     <StackPanel Grid.Column="0" Margin="0,0,15,0">
-                        
-                        <DatePicker SelectedDate="{Binding FechaInicio}"
-                                    Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
-                                    materialDesign:HintAssist.Hint="Fecha Inicio"
-                                    Width="130"/>
+                        <form:FormDatePicker Label="Fecha Inicio"
+                                             Value="{Binding FechaInicio, Mode=TwoWay}"
+                                             Width="130"/>
                     </StackPanel>
 
                     <StackPanel Grid.Column="1" Margin="0,0,15,0">
-                        
-                        <DatePicker SelectedDate="{Binding FechaFinal}"
-                                    Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
-                                    materialDesign:HintAssist.Hint="Fecha Final"
-                                    Width="130"/>
+                        <form:FormDatePicker Label="Fecha Final"
+                                             Value="{Binding FechaFinal, Mode=TwoWay}"
+                                             Width="130"/>
                     </StackPanel>
 
                     <StackPanel Grid.Column="2" Margin="0,0,15,0">
-                       
-                        <TextBox Text="{Binding FiltroPlaca, UpdateSourceTrigger=PropertyChanged}"
-                                 materialDesign:HintAssist.Hint="Placa"
-                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                        <form:FormField Label="Placa"
+                                        Value="{Binding FiltroPlaca, Mode=TwoWay}"
+                                        MaxLength="8"/>
                     </StackPanel>
 
                     <StackPanel Grid.Column="3" Margin="0,0,15,0">
-                       
-                        <TextBox Text="{Binding FiltroCliente, UpdateSourceTrigger=PropertyChanged}"
-                                 materialDesign:HintAssist.Hint="Nombre del cliente"
-                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                        <form:FormField Label="Nombre del cliente"
+                                        Value="{Binding FiltroCliente, Mode=TwoWay}"/>
                     </StackPanel>
 
-                    <StackPanel Grid.Column="4" Margin="0,0,15,0">
-                       
-                        <ComboBox ItemsSource="{Binding EstadoOptions}"
-                          SelectedItem="{Binding SelectedEstadoOption, Mode=TwoWay}"
-                          DisplayMemberPath="Label"
-                          Style="{StaticResource MaterialDesignFloatingHintComboBox}"
-                          materialDesign:HintAssist.Hint="Estado"/>
-                    </StackPanel>
+                    <StackPanel Grid.Column="5" Orientation="Horizontal" VerticalAlignment="Bottom" Margin="0,0,0,0">
+                        <form:CustomButton Command="{Binding BuscarCommand}"
+                                           Variant="Search"
+                                           Text="Aplicar Filtros"
+                                           Margin="0,0,10,0"/>
 
-                    <StackPanel Grid.Column="6" Orientation="Horizontal" VerticalAlignment="Bottom" Margin="0,0,0,0">
-                        <Button Command="{Binding BuscarCommand}"
-                                Style="{StaticResource MaterialDesignRaisedButton}"
-                                materialDesign:ButtonAssist.CornerRadius="5"
-                                Background="{StaticResource MaterialDesign.Brush.Primary}"
-                                Padding="15,8" Margin="0,0,10,0">
-                            <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="Filter" Margin="0,0,8,0" VerticalAlignment="Center" Foreground="White"/>
-                                <TextBlock Text="Aplicar Filtros" VerticalAlignment="Center" Foreground="White"/>
-                            </StackPanel>
-                        </Button>
-
-                        <Button Command="{Binding AgregarCommand}"
-                                Style="{StaticResource MaterialDesignRaisedButton}"
-                                materialDesign:ButtonAssist.CornerRadius="5"
-                                Padding="20,8">
-                            <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="Plus" Margin="0,0,8,0" VerticalAlignment="Center" Foreground="White"/>
-                                <TextBlock Text="Nuevo" VerticalAlignment="Center" Foreground="White"/>
-                            </StackPanel>
-                        </Button>
+                        <form:CustomButton Command="{Binding AgregarCommand}"
+                                           Variant="Add" Text="Agregar"/>
                     </StackPanel>
                 </Grid>
             </StackPanel>
